--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_activity_maps">MapsActivity</string>
     <string name="client_id">823421392498-hb77v5fahvl9nsljuleg7m4q221jhdlm.apps.googleusercontent.com</string>
     <string name="hotel_collection_name">TestHotel</string>
+    <string name="title_activity_search_by_map">SearchByMapActivity</string>
 </resources>
