--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,12 @@
     <string name="app_name">StayFinder</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-<!--    <string name="client_id">823421392498-d1p3667ve1g5o9beu9hvaqs2gg8im0i2.apps.googleusercontent.com</string>-->
+    <!--    <string name="client_id">823421392498-d1p3667ve1g5o9beu9hvaqs2gg8im0i2.apps.googleusercontent.com</string>-->
     <string name="client_id">823421392498-hb77v5fahvl9nsljuleg7m4q221jhdlm.apps.googleusercontent.com</string>
     <string name="title_activity_maps">MapsActivity</string>
-<!--    <string name="client_id">823421392498-hb77v5fahvl9nsljuleg7m4q221jhdlm.apps.googleusercontent.com</string>-->
+    <!--    <string name="client_id">823421392498-hb77v5fahvl9nsljuleg7m4q221jhdlm.apps.googleusercontent.com</string>-->
     <string name="hotel_collection_name">TestHotel</string>
+    <string name="MAP_API_KEY">AIzaSyB8PtvFFoKAKMAm1tWtrdkX0RJ9Kx8l0tI</string>
     <string name="title_activity_search_by_map">SearchByMapActivity</string>
+    <string name="title_activity_edit_location">EditLocationActivity</string>
 </resources>
