--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,12 @@
     <string name="default_info_title">Default Location</string>
     <string name="default_info_snippet">No places found, because location permission is disabled.</string>
     <string name="title_activity_search_by_map">SearchByMapActivity</string>
+    <string-array name="spinner_type_room">
+        <item>Single</item>
+        <item>Couple</item>
+        <item>Triple</item>
+        <item>Family</item>
+        <item>Villa</item>
+        <item>Family</item>
+    </string-array>
 </resources>
