update: update room

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
         <item>Couple</item>
         <item>Triple</item>
         <item>Family</item>
-        <item>Villa</item>
-        <item>Family</item>
+        <item>Suite</item>
+        <item>Dorm</item>
     </string-array>
 </resources>
