--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,46 @@
         <item>Suite</item>
         <item>Dorm</item>
     </string-array>
+
+    <string-array name="spinner_type_bed">
+        <item>Twin bed(s) / 90–130 cm wide</item>
+        <item>Full bed(s) / 131–150 cm wide</item>
+        <item>Queen bed(s) / 151–180 cm wide</item>
+        <item>King bed(s) / 181–210 cm wide</item>
+        <item>Bunk bed(s) / Variable size</item>
+        <item>Sofa bed(s) / Variable size</item>
+        <item>Futon bed(s) / Variable size</item>
+    </string-array>
+
+    <string-array name="spinner_bed_num">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+    </string-array>
+
+    <string-array name="spinner_rate">
+        <item>VND</item>
+        <item>%</item>
+    </string-array>
+
+    <string-array name="facilities_item">
+        <item>Free Wifi</item>
+        <item>Restaurant</item>
+        <item>Room Services</item>
+        <item>Bar</item>
+        <item>24-hour front desk</item>
+        <item>Fitness Center</item>
+        <item>Garden</item>
+        <item>Terrace</item>
+        <item>Non-smoking rooms</item>
+        <item>Airport Shuttle</item>
+        <item>Family rooms</item>
+        <item>Spa</item>
+        <item>Hot tub/Jacuzzi</item>
+        <item>Air conditioning</item>
+        <item>Water park</item>
+        <item>Swimming pool</item>
+    </string-array>
 </resources>
