--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,9 @@
     <string name="default_info_title">Default Location</string>
     <string name="default_info_snippet">No places found, because location permission is disabled.</string>
     <string name="title_activity_search_by_map">SearchByMapActivity</string>
+
+    <string name="collection_name_token_notification">NotificationToken</string>
+
     <string-array name="spinner_type_room">
         <item>Single</item>
         <item>Couple</item>
