--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="title_activity_search_by_map">SearchByMapActivity</string>
 
     <string name="collection_name_token_notification">NotificationToken</string>
+    <string name="fcm_server_key">AAAAv7e9VnI:APA91bGWJ_MICzBN0KIb6aZ4bromjnmNm7iNlJRn4FErP_KY6M4AOOn9s5g1AywIuCg7BLc-rmzJ3SCI9A4cFbzUzMCEHr_pMELaCBW5pLWW60zKkue4wm08XxT8ELSUv0fFj_EDH_6C</string>
 
     <string-array name="spinner_type_room">
         <item>Single</item>
